# NotEnoughBingo

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  allbingopage.html  bingo.css  card.css  compose.yml  cover.avif  createbingo.html  createbingo.js  foryoupage.html  main.html  script.js  styles.css
.github/: dependabot.yml
backend/: .dockerignore  Dockerfile  docker-entrypoint.sh  manage.py  openapi.yaml  pyproject.toml
backend/apps/accounts/: admin.py  backends.py  middleware.py  models.py  profile_urls.py  security.py  serializers.py  services.py  session_management.py  signals.py  tasks.py  urls.py  user_urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_emailverification_pending_display_name_and_more.py
backend/apps/analytics/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/analytics/migrations/: 0001_initial.py
backend/apps/bingos/: __init__.py  admin.py  apps.py  exceptions.py  models.py  serializers.py  services.py  urls.py  validators.py  views.py
backend/apps/bingos/migrations/: 0001_initial.py  0002_draftmediaasset.py  __init__.py
backend/apps/bingos/tests/: __init__.py  test_drafts_and_revisions.py
backend/apps/common/: admin.py  apps.py  authentication.py  exceptions.py  health.py  idempotency.py  logging.py  middleware.py  models.py  pagination.py  permissions.py  schema.py  tasks.py
backend/apps/common/migrations/: 0001_initial.py
backend/apps/common/tests/: test_seed_e2e.py
backend/apps/exports/: __init__.py  account_data.py  admin.py  models.py  renderers.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/exports/migrations/: 0001_initial.py  __init__.py
backend/apps/exports/tests/: test_exports.py
backend/apps/media_assets/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
backend/apps/media_assets/migrations/: 0001_initial.py  0002_mediaasset_processing_task_id.py  __init__.py
backend/apps/media_assets/tests/: __init__.py  test_validation.py
backend/apps/moderation/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/notifications/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/plays/: __init__.py  admin.py  apps.py  exceptions.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/social/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/config/: asgi.py  celery.py  urls.py
backend/config/settings/: base.py  development.py  production.py  test.py
backend/tests/: conftest.py  test_accounts.py  test_analytics.py  test_api_boundaries.py  test_moderation.py  test_notifications.py  test_security_regressions.py  test_seed_command.py  test_social.py
(+109 files in other folders)
